fix alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,11 +5,26 @@
 .centered {
   flex: 1;
   display: flex;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgb(250 250 249);
   color: rgb(41 37 36);
+    
+  
+}
+
+.centeredFull {
+  flex: 1;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(250 250 249);
+  color: rgb(41 37 36);
+    
   
 }
 
